--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,18 @@
-on: [push, pull_request, workflow_dispatch]
-
 name: Build
+
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    name: Build Test
+    runs-on: ubuntu-20.04
+    container:
+      image: zmkfirmware/zmk-build-arm:2.4
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - board: nice_nano
+            shield: midipad
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -15,64 +22,47 @@ jobs:
           cache-name: cache-zephyr-modules
         with:
           path: |
+            bootloader/
             modules/
             tools/
             zephyr/
-            bootloader/
             zmk/
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('manifest-dir/west.yml') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('config/west.yml') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      - name: West Init
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-init
-        with:
-          args: 'init "-l config"'
-      - name: West Update
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-update
-        with:
-          args: 'update'
-      - name: West Config Zephyr Base
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-config
-        with:
-          args: 'config "--global zephyr.base-prefer configfile"'
-      - name: West Zephyr Export
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-zephyr-export
-        with:
-          args: 'zephyr-export'
-      - name: West Build (Kyria Left)
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-kyria-left
-        with:
-          args: 'build "-s zmk/app -b nice_nano -- -DSHIELD=kyria_left -DZMK_CONFIG=/github/workspace/config"'
-      - name: Kyria DTS File
-        if: ${{ always() }}
-        run: cat -n build/zephyr/nice_nano.dts.pre.tmp
-      - name: Kyria Left Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 kyria_left_nice_nano.uf2
-      - name: Archive (Kyria Left)
+        timeout-minutes: 2
+        continue-on-error: true
+      - name: Initialize workspace (west init)
+        run: west init -l config
+      - name: Update modules (west update)
+        run: west update
+      - name: Export Zephyr CMake package (west zephyr-export)
+        run: west zephyr-export
+      - name: Prepare variables
+        id: variables
+        run: |
+          if [ -n "${{ matrix.shield }}" ]; then
+            SHIELD_ARG="-DSHIELD=${{ matrix.shield }}"
+            ARTIFACT_NAME="${{ matrix.shield }}-${{ matrix.board }}-zmk"
+          else
+            SHIELD_ARG=
+            ARTIFACT_NAME="${{ matrix.board }}-zmk"
+          fi
+
+          echo ::set-output name=shield-arg::${SHIELD_ARG}
+          echo ::set-output name=artifact-name::${ARTIFACT_NAME}
+      - name: Build (west build)
+        run: west build -s zmk/app -b ${{ matrix.board }} -- ${{ steps.variables.outputs.shield-arg }} -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: Generated DTS file
+        if: always()
+        run: cat -n build/zephyr/${{ matrix.board }}.dts.pre.tmp
+      - name: Archive artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: firmware
-          path: kyria_left_nice_nano.uf2
-      - name: West Build (Kyria Right)
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-kyria-right
-        with:
-          args: 'build "--pristine -s zmk/app -b nice_nano -- -DSHIELD=kyria_right -DZMK_CONFIG=/github/workspace/config"'
-      - name: Kyria Right Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 kyria_right_nice_nano.uf2
-      - name: Archive (Kyria Right)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: kyria_right_nice_nano.uf2
+          name: '${{ steps.variables.outputs.artifact-name }}'
+          path: |
+            build/zephyr/zmk.hex
+            build/zephyr/zmk.uf2
+        continue-on-error: true
