--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,6 @@
 # This file generates the GitHub Actions matrix.
 ---
 include:
+  - board: numble
   - board: nrf5340dk_nrf5340_cpuapp
     shield: zmk_uno
