Add numble as a west module for GH action builds

--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,15 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: joelspadin
+      url-base: https://github.com/joelspadin
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
+    - name: numble
+      remote: joelspadin
+      revision: main
   self:
     path: config
