Update config and use modules

--- a/config/numble.conf
+++ b/config/numble.conf
@@ -8,4 +8,6 @@
 
 # Uncomment to enable logging
 # CONFIG_ZMK_USB_LOGGING=y
-# CONFIG_LOG_MAX_LEVEL=3
+
+# CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
