--- a/config/zmk_uno.conf
+++ b/config/zmk_uno.conf
@@ -1,20 +1,64 @@
 # Copyright (c) 2022 The ZMK Contributors
 # SPDX-License-Identifier: MIT
 
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_SEC=y
+
 CONFIG_LOG=y
-CONFIG_ZMK_LOG_LEVEL_DBG=y
+CONFIG_ZMK_LOGGING_MINIMAL=y
+CONFIG_INIT_STACKS=y
+CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=2048
+CONFIG_LOG_BUFFER_SIZE=4096
 
 # Uncomment for Single color backlight
 CONFIG_ZMK_BACKLIGHT=y
 
 # Uncomment for RGB
-# CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
 
 # Uncomment for Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
-CONFIG_LV_USE_THEME_MONO=y
+CONFIG_ZMK_DISPLAY_INVERT=y
+# CONFIG_LV_USE_THEME_MONO=y
+# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
 
 # Uncomment these two lines to enable encoder support
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# CONFIG_BT_LOG_LEVEL_DBG=y
+# CONFIG_BT_DEBUG_LOG=y
+# CONFIG_BT_DEBUG_CONN=y
+# CONFIG_BT_DEBUG_SMP=y
+
+CONFIG_SHELL=y
+CONFIG_BT_SHELL=y
+CONFIG_DEVICE_SHELL=y
+CONFIG_GPIO_SHELL=y
+CONFIG_I2C_SHELL=y
+# CONFIG_LV_Z_SHELL=y
+CONFIG_SENSOR_SHELL=y
+CONFIG_SETTINGS_SHELL=y
+# CONFIG_USBD_SHELL=y
+CONFIG_CBPRINTF_COMPLETE=y
+
+# These should be set automatically, but they aren't for some reason?
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_BLE=y
+
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
+CONFIG_NVS=y
+CONFIG_SETTINGS_NVS=y
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
+
+# Default main and BLE stack sizes are too small for HCI RPMsg
+CONFIG_MAIN_STACK_SIZE=2048
+CONFIG_ZMK_BLE_THREAD_STACK_SIZE=1024
+
+# CONFIG_ZMK_BLE_PASSKEY_CONFIRM=y
+# CONFIG_ZMK_BLE_PASSKEY_DISPLAY=y
+# CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
